--- a/src/Pages/Shared/Footer/Footer.css
+++ b/src/Pages/Shared/Footer/Footer.css
@@ -1,6 +1,6 @@
 .footer {
   padding: 50px 0;
-  background: linear-gradient( rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7) ), url(https://github.com/AnirbanAnu2000/img-storage/blob/main/care/about/about3.jpg?raw=true) no-repeat center;
+  background: linear-gradient( rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8) ), url(https://github.com/AnirbanAnu2000/img-storage/blob/main/care/about/about3.jpg?raw=true) no-repeat center;
   background-size: cover;
   color: #fff;
   /* background-attachment: fixed; */
@@ -23,4 +23,37 @@
 
 .footer ul li{
   padding: 0;
+}
+
+.footer-input-field {
+  display: block;
+  width: 100%;
+  padding: .375rem .75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  background-color: #fff;
+  background-clip: padding-box;
+  border-radius: .25rem;
+  border: 3px solid #ced4da;
+  appearance: none;
+  background-clip: padding-box;
+}
+
+.footer-input-field:focus {
+  outline: none;
+  border-color: #097a09 !important;
+}
+
+.footer-submit-btn {
+  display: inline-block;
+  padding: .375rem .75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  background-clip: padding-box;
+  border-radius: .25rem;
+  border: 1px solid #097a09;
+  appearance: none;
+  background-clip: padding-box;
 }
