--- a/src/Pages/Home/HomePageSpecialist/HomePageSpecialist.css
+++ b/src/Pages/Home/HomePageSpecialist/HomePageSpecialist.css
@@ -1,7 +1,13 @@
 #home-page-specialist {
-  background-color: rgb(183, 223, 233);
+  padding-top: 30px;
+  padding-bottom: 50px;
+}
+
+.specialist-heading {
+  margin-bottom: 30px;
 }
 
 .specialist-card-img {
   height: 300px;
+  padding: 15px;
 }
