--- a/src/Pages/Home/HomePageFaq/HomePageFaq.css
+++ b/src/Pages/Home/HomePageFaq/HomePageFaq.css
@@ -1,5 +1,5 @@
 .home-page-faq-container {
-  border-bottom: 1px solid #097a09;
+  border-bottom: 1px solid #097a09; 
 }
 
 .accordion-button {
@@ -22,4 +22,21 @@
 
 .accordion-button.collapsed:focus {
   outline: none;
+}
+
+@media screen and (max-width: 575px) {
+
+  .faq-part-heading {
+    font-size: 30px;
+  }
+
+  .faq-qa {
+    background-color: #097a09;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+
+  .faq-img {
+    margin-top: 20px; 
+  }
 }
