--- a/src/Pages/Home/HomePageSpecialist/HomePageSpecialist.css
+++ b/src/Pages/Home/HomePageSpecialist/HomePageSpecialist.css
@@ -9,5 +9,28 @@
 
 .specialist-card-img {
   height: 300px;
-  padding: 15px;
+  padding: 15px; 
+}
+
+@media screen and (max-width:575px) {
+  
+  .specialist-heading {
+    font-size: 30px;
+  }
+
+  .slick-prev {
+    display: none !important;
+  }
+
+  .slick-next {
+    display: none !important;
+  }
+}
+
+@media screen and (min-width:481px) and (max-width:575px) {
+    
+  .specialist-card {
+    margin-left: 50px !important;
+    margin-right: 50px !important;
+  }
 }
