--- a/src/Pages/Shared/Header/Header.css
+++ b/src/Pages/Shared/Header/Header.css
@@ -6,5 +6,30 @@
   display: inline-block;
   margin-right: 15px;
   font-size: 18px;
-  cursor: pointer;
+  cursor: pointer; 
+}
+
+@media screen and (max-width: 575px){
+  .header-top-social-link {
+    margin-bottom: 10px;
+  }
+
+  .navbar-toggler {
+    box-shadow: none !important;
+    border: 0 !important;
+  }
+
+  #top-navigation .navbar-nav {
+    margin-top: 15px !important;
+  }
+
+  #top-navigation .navbar-nav .nav-item {
+    text-align: center;
+    margin-bottom: 15px;
+  }
+
+  #top-navigation .navbar-nav .nav-item:last-child {
+    margin-bottom: 0;
+  }
+
 }
