--- a/src/Pages/Home/HomePageBanner/HomePageBanner.css
+++ b/src/Pages/Home/HomePageBanner/HomePageBanner.css
@@ -12,7 +12,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgb(0, 0, 0, .7);
+  background-color: rgb(0, 0, 0, .7); 
 }
 
 .slide-item-overlay h1 { 
@@ -48,7 +48,21 @@
 
 }
 
-
 @media only screen and (min-width:576px) and (max-width:767px) {
-  
+  .slide-item-overlay h1 { 
+    margin-left: 10px;
+    margin-right: 10px;
+    font-size: 28px;
+  }
+
+  .slide-item-overlay p { 
+    margin-left: 10px;
+    margin-right: 10px;
+    font-size: 14px;
+  }
+
+  .carousel-control-prev-icon,
+  .carousel-control-next-icon {
+    display: none;
+  }
 }
