--- a/src/Pages/Home/HomePageSpecialist/HomePageSpecialist.css
+++ b/src/Pages/Home/HomePageSpecialist/HomePageSpecialist.css
@@ -25,12 +25,40 @@
   .slick-next {
     display: none !important;
   }
+
 }
 
 @media screen and (min-width:481px) and (max-width:575px) {
     
   .specialist-card {
     margin-left: 50px !important;
-    margin-right: 50px !important;
+    margin-right: 50px !important; 
   }
+
+}
+
+@media only screen and (min-width:576px) and (max-width:767px) {
+
+  .specialist-heading {
+    font-size: 32px;
+  }
+
+  .slick-prev {
+    display: none !important;
+  }
+
+  .slick-next {
+    display: none !important;
+  }
+
+  .specialist-card {
+    margin-left: 6px !important;
+    margin-right: 6px !important; 
+  }
+
+  .specialist-card-img {
+    height: 250px;
+    padding: 10px; 
+  }
+
 }
