--- a/src/Pages/Shared/Header/Header.css
+++ b/src/Pages/Shared/Header/Header.css
@@ -29,7 +29,37 @@
   }
 
   #top-navigation .navbar-nav .nav-item:last-child {
-    margin-bottom: 0;
+    margin-bottom: 0 !important; 
   }
 
+}
+
+@media screen and (min-width: 576px) and (max-width:767px) {
+  .header-top-part-col {
+    margin-bottom: 10px;
+    margin-top: 10px;
+    border-bottom: 1px solid #097a09;
+  }
+
+  .header-top-part-col:nth-child(odd) {
+    border-right: 1px solid #097a09;    
+  }
+
+  .navbar-toggler {
+    box-shadow: none !important;
+    border: 0 !important;
+  }
+
+  #top-navigation .navbar-nav {
+    margin-top: 15px !important;
+  }
+
+  #top-navigation .navbar-nav .nav-item {
+    text-align: center;
+    margin-bottom: 15px;
+  }
+
+  #top-navigation .navbar-nav .nav-item:last-child {
+    margin-bottom: 0 !important; 
+  }
 }
