--- a/src/Pages/Home/HomePageAbout/HomePageAbout.css
+++ b/src/Pages/Home/HomePageAbout/HomePageAbout.css
@@ -39,12 +39,14 @@
   .home-about-part-left {
     margin-bottom: 50px;
   }
+
 }
 
 @media only screen and (min-width:576px) and (max-width:767px) {
+
   .home-about-part-right {
     padding-left: 30px;
-    padding-right: 30px;
+    padding-right: 30px; 
   }
 
   .home-about-part-right h1 {
@@ -58,4 +60,38 @@
   .home-about-part-left {
     margin-bottom: 50px;
   }
+
 }
+
+@media screen and (min-width:768px) and (max-width:991px) {
+
+  .home-about-part-right {
+    padding-left: 50px;
+    padding-right: 50px; 
+  }
+
+  .home-about-part-right h1 {
+    font-size: 36px;
+  }
+
+  .home-about-part-right {
+    margin-bottom: 30px; 
+  }
+
+  .home-about-part-left {
+    margin-bottom: 50px; 
+  }
+
+}
+
+@media screen and (min-width:992px) and (max-width:1199px) {
+
+  .home-about-part-right h1 {
+    margin-top: 40px;
+    margin-bottom: 20px;
+    font-weight: 700;
+    font-size: 36px;
+  }
+
+}
+
