--- a/src/Pages/Home/HomePageFaq/HomePageFaq.css
+++ b/src/Pages/Home/HomePageFaq/HomePageFaq.css
@@ -37,7 +37,7 @@
   }
 
   .faq-img {
-    margin-top: 20px; 
+    margin-top: 20px;  
   }
 
 }
@@ -60,5 +60,17 @@
     margin-bottom: -40px;
   }
 
+}
 
+@media screen and (min-width:768px) and (max-width:991px) {
+
+  .faq-part-heading {
+    font-size: 36px;
+    margin-bottom: 0;
+  }
+
+  .home-page-faq-container {
+    padding-bottom: 10px !important;
+  }
+  
 }
