--- a/src/Pages/Home/HomePageSpecialist/HomePageSpecialist.css
+++ b/src/Pages/Home/HomePageSpecialist/HomePageSpecialist.css
@@ -58,7 +58,11 @@
 
   .specialist-card-img {
     height: 250px;
-    padding: 10px; 
+    padding: 10px;  
   }
 
 }
+
+/* @media screen and (min-width:768px) and (max-width:991px) {
+
+} */
