--- a/src/Pages/Shared/Footer/Footer.css
+++ b/src/Pages/Shared/Footer/Footer.css
@@ -59,6 +59,7 @@
 }
 
 @media screen and (max-width:575px) {
+
   .footer-important-link {
     margin-top: 15px;
   }
@@ -66,9 +67,10 @@
   .footer-contact-form {
     margin-top: 30px;
   }
+
 } 
 
-@media screen and (min-width:481px) and (max-width:575px) {
+@media screen and (min-width:481px) and (max-width:575px) { 
 
   .footer-top-part {
     padding-left: 20px;
@@ -99,5 +101,17 @@
     display: flex;
     justify-content: center;
   } */
+
+}
+
+@media screen and (min-width:768px) and (max-width:991px) {
+
+  .footer-important-link {
+    margin-top: 15px;
+  }
+
+  .footer-contact-form {
+    margin-top: 30px;
+  }
 
 }
