--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,23 @@
+/* @import url('https://fonts.googleapis.com/css2?family=Galada&family=Mina:wght@400;700&display=swap'); */
+
+/* 
+font-family: 'Baloo Da 2', cursive;
+font-family: 'Galada', cursive;
+font-family: 'Mina', sans-serif; */
+
 *{
   margin: 0;
   padding: 0;
   outline: 0;
-  font-family: 'Roboto Slab', serif;
+  /* font-family: 'Roboto Slab', serif; */
+}
+
+h1,h2,h3,h4,h5,h6 {
+  font-family: 'Galada', cursive;
+}
+
+p, a, a:hover, ul li, span {
+  font-family: 'Baloo Da 2', cursive;
 }
 
 a, 
@@ -21,3 +36,23 @@ a:hover {
 .text-extra-bold {
   font-weight: 900;
 }
+
+.scroll-top-button {
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  z-index: 999;
+  border: 5px solid #779b77;
+  border-radius: 4px;
+}
+
+.scroll-top-icon {
+  width: 40px;
+  line-height: 40px;
+  font-size: 26px;
+  background-color: #097a09;
+  color: #fff;
+  font-weight: 700;
+}
+
+/* common css end */
