--- a/src/Pages/Shared/Header/Header.css
+++ b/src/Pages/Shared/Header/Header.css
@@ -2,11 +2,26 @@
   width: 50%;
 }
 
+.navbar-link {
+  /* padding: 10px 15px;
+  border-radius: 5px;
+  margin-right: 10px; */
+  transition: all ease-in-out .4s;
+}
+
+.navbar-link:hover {
+  /* padding: 10px 15px;
+  border-radius: 5px;
+  margin-right: 10px; */
+  color: #097a09 !important;
+  background-color: #fff !important;
+}
+
 .header-top-social-link i {
   display: inline-block;
   margin-right: 15px;
   font-size: 18px;
-  cursor: pointer; 
+  cursor: pointer;  
 }
 
 @media screen and (max-width: 575px){
@@ -25,7 +40,11 @@
 
   #top-navigation .navbar-nav .nav-item {
     text-align: center;
-    margin-bottom: 15px;
+    margin-bottom: 25px;
+  }
+
+  #top-navigation .navbar-nav .nav-item:first-child {
+    margin-top: 8px;
   }
 
   #top-navigation .navbar-nav .nav-item:last-child {
@@ -57,7 +76,11 @@
 
   #top-navigation .navbar-nav .nav-item {
     text-align: center;
-    margin-bottom: 15px;
+    margin-bottom: 25px;
+  }
+
+  #top-navigation .navbar-nav .nav-item:first-child {
+    margin-top: 8px;
   }
 
   #top-navigation .navbar-nav .nav-item:last-child {
@@ -69,7 +92,7 @@
 @media screen and (min-width:768px) and (max-width:991px) {
 
   .header-top-title {
-    font-size: 18px;
+    font-size: 18px; 
   }
 
   .header-top-info {
@@ -86,7 +109,7 @@
   
   #header-top-part .header-top-part-container{
     padding-top: 15px;
-    padding-bottom: 7px;
+    padding-bottom: 7px; 
   }
 
 }
