--- a/src/Pages/About/About/About.css
+++ b/src/Pages/About/About/About.css
@@ -239,3 +239,12 @@
   }
 
 }
+
+@media screen and (min-width: 768px) and (max-width:991px) {
+
+  .chairman-statement-text-content {
+    margin-top: 60px;
+    padding-left: 10px;
+  }
+
+}
