--- a/src/Pages/Shared/Header/Header.css
+++ b/src/Pages/Shared/Header/Header.css
@@ -1,5 +1,10 @@
 .header-top-logo {
-  width: 50%;
+  width: 70%;
+}
+
+.header-brand-name h1 {
+  font-size: 50px;
+  margin-top: 15px;
 }
 
 .navbar-link {
@@ -21,10 +26,20 @@
   display: inline-block;
   margin-right: 15px;
   font-size: 18px;
-  cursor: pointer;  
+  cursor: pointer;   
 }
 
 @media screen and (max-width: 575px){
+
+  .header-top-logo {
+    width: 25%;
+  }
+
+  .header-brand-name h1 {
+    margin-top: 10px;
+    font-size: 36px;
+  }
+
   .header-top-social-link {
     margin-bottom: 10px;
   }
@@ -55,15 +70,26 @@
 
 @media screen and (min-width: 576px) and (max-width:767px) {
 
+  .header-top-logo {
+    width: 50% !important;
+  }
+
+  .header-brand-name h1 {
+    margin-top: 10px;
+    font-size: 40px;
+  }
+
   .header-top-part-col {
     margin-bottom: 10px;
     margin-top: 10px;
     border-bottom: 1px solid #097a09;
   }
 
-  .header-top-part-col:nth-child(odd) {
+  /* .header-top-part-col:nth-child(1), 
+  .header-top-part-col:nth-child(3),
+  .header-top-part-col:nth-child(4) {
     border-right: 1px solid #097a09;    
-  }
+  } */
 
   .navbar-toggler {
     box-shadow: none !important;
@@ -91,6 +117,21 @@
 
 @media screen and (min-width:768px) and (max-width:991px) {
 
+  .header-top-logo {
+    width: 55% !important;
+  }
+
+  .header-brand-name h1 {
+    margin-top: 10px;
+    font-size: 50px;
+  }
+
+  .header-top-part-col {
+    margin-bottom: 10px;
+    margin-top: 10px;
+    border-bottom: 1px solid #097a09;
+  }
+
   .header-top-title {
     font-size: 18px; 
   }
@@ -106,6 +147,15 @@
 } 
 
 @media screen and (min-width:992px) and (max-width:1199px) {
+
+  .header-top-logo {
+    width: 75% !important;
+  }
+
+  .header-brand-name h1 {
+    margin-top: 10px;
+    font-size: 42px;
+  }
   
   #header-top-part .header-top-part-container{
     padding-top: 15px;
