--- a/src/Pages/Shared/Footer/Footer.css
+++ b/src/Pages/Shared/Footer/Footer.css
@@ -1,9 +1,9 @@
 .footer {
   padding: 50px 0;
-  background: linear-gradient( rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8) ), url(https://github.com/AnirbanAnu2000/img-storage/blob/main/care/about/about3.jpg?raw=true) no-repeat center;
+  background: linear-gradient( rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.8) ), url(https://github.com/AnirbanAnu2000/img-storage/blob/main/care/about/about3.jpg?raw=true) no-repeat center;
   background-size: cover;
   color: #fff;
-  /* background-attachment: fixed; */
+  background-attachment: fixed;
 }
 
 .contact-social-link li {
@@ -13,7 +13,7 @@
 .footer-social-links i {
   margin-right: 20px;
   font-size: 18px;
-  display: inline-block;
+  display: inline-block;  
 }
 
 .footer ul{
@@ -25,6 +25,8 @@
   padding: 0;
 }
 
+/* footer contact form */
+/* 
 .footer-input-field {
   display: block;
   width: 100%;
@@ -56,7 +58,7 @@
   border: 1px solid #097a09;
   appearance: none;
   background-clip: padding-box; 
-}
+} */
 
 @media screen and (max-width:575px) {
 
